Cambios Padrón. Solución de bugs.